This commit updates the carousel overlap error, adds the call to action form, fixes the search by location margins and updates the feedback button.

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -187,23 +187,24 @@ h4 {
 }
 
 .carousel-inner {
-    height: 450px;
+    height:400px;
     background-position: center;
     background-size: cover;
 }
 
-.carousel .slide {
-    margin-bottom: 30px;
-    height: 450px;
+.carousel {
+    height:300px;
+    max-height: 400px;}
+.item img {
+    width: 100%;
+    height: 200px;
 }
 
 #survey_button {
     position: fixed;
     bottom: 0;
-    left: 50%;
-    z-index: 9999;
     margin-bottom: 10px;
-    margin-left: -123px;
+    width: 100%;
 }
 
 .noborder{
@@ -214,4 +215,15 @@ h4 {
 .btn-info{
     height: 44px;
 
+}
+.panel-heading{
+    background: #9E9E9E;
+    margin-bottom: 15px;
+
+}
+.navbar-form{
+    width: auto;
+}
+.shadows{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
